[tool.poetry]
name = "discommand"
version = "0.0.1"
description = ""
authors = ["Jordan Cottle <jordancottle622@gmail.com>"]

readme = "README.md"
license = "MIT"
homepage = "https://github.com/Jordan-Cottle/discommand"
repository = "https://github.com/Jordan-Cottle/discommand"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pylint = "^2.9.6"
black = "^21.7b0"
pytest = "^6.2.4"
mypy = "^0.910"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "deep: marks tests as deep (often more thourough than practical to execute regularly)",
]
addopts = [
    "--cov",
    "-vv",
    "--stepwise",
    "--strict-markers",
    "-m not deep",
]
log_cli = true
log_cli_level = "DEBUG"
testpaths = [
    "tests",
]

[tool.pylint.master]
extension-pkg-allow-list= [
    "pydantic"
]

[tool.pylint.miscellaneous]
notes = [
    "FIXME",
    "XXX"
]

[tool.pylint.similarities]
ignore-imports = "yes"
